# ComputacionParalela

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/uniovi/es/computacionparalela/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: f2c.h  native-lib.cpp
app/src/main/java/uniovi/es/computacionparalela/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/uniovi/es/computacionparalela/: ExampleUnitTest.java
